<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    android:background="@color/backgroundGreen">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/toolbar_background"
        android:foregroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Centered Title -->
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_header_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/profile_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/profile_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/profile_back_button"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/content_desc_back_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/profile_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_toolbar" />

    <!-- Profile Picture Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="70dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/profile_image_png"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />
    </androidx.cardview.widget.CardView>

    <!-- Small Circular Edit Button -->
    <ImageView
        android:id="@+id/profile_edit_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/content_desc_edit_profile_icon"
        android:background="@drawable/circle_background"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        android:padding="6dp"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image" />

    <!--Full Name-->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_last_name_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- User Name -->
    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <!-- Mood Following Button -->

    <!-- Search User Button -->

    <LinearLayout

        android:id="@+id/search_user_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"

        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/graph_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/content_desc_search_icon"
            android:src="@android:drawable/ic_menu_search"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="User Search"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/content_desc_arrow_icon"
            android:src="@drawable/simple_arrow"
            app:tint="@color/black" />
    </LinearLayout>



    <LinearLayout

        android:id="@+id/graph_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"

        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_user_button">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/content_desc_search_icon"
            android:src="@android:drawable/ic_menu_compass"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="MoodGraph"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/content_desc_arrow_icon"
            android:src="@drawable/simple_arrow"
            app:tint="@color/black" />
    </LinearLayout>

    <!-- signout button-->

    <LinearLayout
        android:id="@+id/signout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="sign out button"
            android:src="@android:drawable/ic_lock_lock"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="Sign out"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/content_desc_arrow_icon"
            android:src="@drawable/simple_arrow"
            app:tint="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>