...
        app:layout_constraintBottom_toBottomOf="@id/login_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_toolbar" />

    <!-- Username Label -->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_input_rounded_box"
        android:hint="User ID or Email"
        android:padding="12dp"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_search_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_background"
        android:clickable="true"
...
