...
        app:layout_constraintBottom_toBottomOf="@+id/startup_page_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startup_page_toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button_login_page"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_background"
...
